Search, albums and artis info routes, react router added

--- a/src/App.css
+++ b/src/App.css
@@ -1,33 +1,16 @@
 .App {
   text-align: center;
-}
-
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 40vmin;
-  pointer-events: none;
-}
-
-.App-header {
-  background-color: #282c34;
+  align-content: center;
   min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  background-image: linear-gradient(to right, #868f96 0%, #596164 100%);
 }
-
-.App-link {
-  color: #61dafb;
+.Tittle{
+  color: whitesmoke;
+  text-align: center;
+  justify-content: space-around
 }
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.SubTittle{
+  color: whitesmoke;
+  text-align: center;
+  justify-content: space-around
 }
