Update dependencies and modify app styling
- Upgraded react-scripts from version 3.1.1 to 5.0.1 in package.json for improved performance and features.
- Changed the background gradient in App.css to enhance the visual design of the application.

--- a/src/App.css
+++ b/src/App.css
@@ -2,7 +2,7 @@
   text-align: center;
   align-content: center;
   min-height: 100vh;
-  background-image: linear-gradient(to right, #868f96 0%, #596164 100%);
+  background-image: linear-gradient(to right, #014070 0%, #787b7b 100%);
 }
 .Tittle{
   color: whitesmoke;
